# Snacke

./: CMakeLists.txt  LICENSE  README.md
include/: class.h
src/: CMakeLists.txt  base.cpp  file.cpp  main.cpp  menu.cpp  more.cpp
